# wts-ft

./: CMakeLists.txt  README.md  ServoToFinger.ods  package.xml  setup.py
launch/: tactile.launch  tactile_indep.launch  visualise_wts-ft.launch  wts-ft.launch  wts-ft_publisher.launch  wts_ft_publisher.launch
scripts/: TimeSeries.py  animatedplot.py  heatmap.py  wts_ft_interface.py  wts_ft_interface_1.py  wts_ft_interface_2.py  wts_ft_listener.py  wts_ft_listener_1.py  wts_ft_listener_2.py  wts_ft_ros.py  wts_ft_ros_1.py  wts_ft_ros_2.py  wts_ft_ros_combined.py
src/wts_ft/: crc16.py  visualiseWts-ft.py  visualise_wts_ft.py  wts-ft_publisher.py  wts_ft_interface.py  wts_ft_listener_1.py  wts_ft_listener_2.py  wts_ft_listener_combined.py
src/wts_ft/parameters/: sensors_calibration.npy
