<?xml version="1.0"?>
<package format="2">
  <name>wts_ft</name>
  <version>0.1.0</version>
  <description>Objects detection</description>

  <maintainer email="pedro.baptistamachado@ntu.ac.uk">Pedro Machado</maintainer>
  <license>GPLv3</license>
  <url type="website">https://gitlab.com/CNCR-NTU/sawyer-grasping-project</url>
  <author email="pedro.baptistamachado@ntu.ac.uk">Pedro Machado</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
